helm/ingress-nginx/exampleapp/NLB.yml
apiVersion: v1
kind: Service
metadata:
  namespace: pagopension
  name: pagopension-nlb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb-ip"
    service.beta.kubernetes.io/aws-load-balancer-type: "internal"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-052e519657f5ae177,subnet-094726eea389c7f3a,subnet-02ab93862b4cedb2c"
spec:
  selector:
    app: pagopension-nlb
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
  loadBalancerClass: service.k8s.aws/nlb
