helm/ingress-nginx/exampleapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: pagopension
spec:
  ingressClassName: nginx-internal-pagopension
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /apple
            backend:
              service:
                name: apple-service
                port:
                  number: 5678
    - http:
        paths:
          - pathType: Prefix
            path: /banana
            backend:
              service:
                name: banana-service
                port:
                  number: 5678



# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: example-ingress
#   namespace: pagopension
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/rewrite-target: /
#     kubernetes.io/ingress.class: nginx-internal
#     service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
#     service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
#     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
# spec:
#   ingressClassName: nginx-internal
#   rules:
#   - http:
#       paths:
#       - path: /apple
#         pathType: Prefix
#         backend:
#           service:
#             name: apple-service
#             port:
#               number: 5678
#       - path: /banana
#         pathType: Prefix
#         backend:
#           service:
#             name: banana-service
#             port:
#               number: 5678
